# bitcoin-testnet-miner

./: .gitignore  Cargo.toml  README.md
scripts/: setup-wallet.sh  start-miner.sh  start-node.sh
src/: block_builder.rs  main.rs  miner.rs  rpc.rs
