[package]
name = "testnet4-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32", features = ["serde"] }
rayon = "1.10"
ureq = { version = "2", default-features = false, features = ["json"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
